parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    QUEUE
    LCURLY
    WS
    FUN
    LANGLE
    SEMICOLON
    RCURLY
    RBRACE
    RANGLE
    ELSE
    IF
    MAP
    LBRACE
    LIST
    TYPE
    ATOMIC

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> agnt defs modules declblock initblock events
Rule 2     agnt -> AGENT CID NL
Rule 3     defs -> def defs
Rule 4     defs -> empty
Rule 5     def -> enumdef
Rule 6     enumdef -> DEF ENUM CID COLON NL INDENT names NL DEDENT
Rule 7     names -> names COMMA LID
Rule 8     names -> LID
Rule 9     modules -> module modules
Rule 10    modules -> empty
Rule 11    module -> MODULE CID COLON NL INDENT adecls sdecls DEDENT
Rule 12    adecls -> ACTUATORS COLON NL INDENT decls DEDENT
Rule 13    adecls -> empty
Rule 14    sdecls -> SENSORS COLON NL INDENT decls DEDENT
Rule 15    sdecls -> empty
Rule 16    decls -> decl decls
Rule 17    decls -> empty
Rule 18    decl -> type varname ASGN exp NL
Rule 19    decl -> type varname NL
Rule 20    type -> INT
Rule 21    type -> FLOAT
Rule 22    type -> POS
Rule 23    type -> BOOLEAN
Rule 24    pid -> PID
Rule 25    varname -> LID
Rule 26    numbots -> NUMBOTS
Rule 27    exp -> bracketexp
Rule 28    exp -> exp PLUS exp
Rule 29    exp -> exp TIMES exp
Rule 30    exp -> exp MINUS exp
Rule 31    exp -> exp BY exp
Rule 32    exp -> varname
Rule 33    exp -> num
Rule 34    exp -> bval
Rule 35    exp -> pid
Rule 36    exp -> numbots
Rule 37    bracketexp -> LPAR exp RPAR
Rule 38    num -> INUM
Rule 39    num -> FNUM
Rule 40    bval -> TRUE
Rule 41    bval -> FALSE
Rule 42    declblock -> awdecls ardecls locdecls
Rule 43    awdecls -> ALLWRITE COLON NL INDENT decls DEDENT
Rule 44    awdecls -> empty
Rule 45    ardecls -> ALLREAD COLON NL INDENT decls DEDENT
Rule 46    ardecls -> empty
Rule 47    locdecls -> LOCAL COLON NL INDENT decls DEDENT
Rule 48    locdecls -> empty
Rule 49    initblock -> INIT COLON NL INDENT stmts DEDENT
Rule 50    initblock -> empty
Rule 51    stmts -> stmt stmts
Rule 52    stmts -> stmt
Rule 53    stmt -> asgn
Rule 54    asgn -> varname ASGN exp NL
Rule 55    events -> event events
Rule 56    events -> event
Rule 57    event -> LID COLON NL INDENT PRE COLON cond NL effblock DEDENT
Rule 58    effblock -> EFF COLON NL INDENT stmts DEDENT
Rule 59    effblock -> EFF COLON stmt
Rule 60    cond -> LPAR cond AND cond RPAR
Rule 61    cond -> LPAR cond OR cond RPAR
Rule 62    cond -> LPAR cond op cond RPAR
Rule 63    cond -> LPAR NOT cond RPAR
Rule 64    cond -> exp
Rule 65    op -> EQ
Rule 66    op -> NEQ
Rule 67    op -> GEQ
Rule 68    op -> LEQ
Rule 69    op -> GT
Rule 70    op -> LT
Rule 71    empty -> <empty>

Terminals, with rules where they appear

ACTUATORS            : 12
AGENT                : 2
ALLREAD              : 45
ALLWRITE             : 43
AND                  : 60
ASGN                 : 18 54
ATOMIC               : 
BOOLEAN              : 23
BY                   : 31
CID                  : 2 6 11
COLON                : 6 11 12 14 43 45 47 49 57 57 58 59
COMMA                : 7
DEDENT               : 6 11 12 14 43 45 47 49 57 58
DEF                  : 6
EFF                  : 58 59
ELSE                 : 
ENUM                 : 6
EQ                   : 65
FALSE                : 41
FLOAT                : 21
FNUM                 : 39
FUN                  : 
GEQ                  : 67
GT                   : 69
IF                   : 
INDENT               : 6 11 12 14 43 45 47 49 57 58
INIT                 : 49
INT                  : 20
INUM                 : 38
LANGLE               : 
LBRACE               : 
LCURLY               : 
LEQ                  : 68
LID                  : 7 8 25 57
LIST                 : 
LOCAL                : 47
LPAR                 : 37 60 61 62 63
LT                   : 70
MAP                  : 
MINUS                : 30
MODULE               : 11
NEQ                  : 66
NL                   : 2 6 6 11 12 14 18 19 43 45 47 49 54 57 57 58
NOT                  : 63
NUMBOTS              : 26
OR                   : 61
PID                  : 24
PLUS                 : 28
POS                  : 22
PRE                  : 57
QUEUE                : 
RANGLE               : 
RBRACE               : 
RCURLY               : 
RPAR                 : 37 60 61 62 63
SEMICOLON            : 
SENSORS              : 14
TIMES                : 29
TRUE                 : 40
TYPE                 : 
WS                   : 
error                : 

Nonterminals, with rules where they appear

adecls               : 11
agnt                 : 1
ardecls              : 42
asgn                 : 53
awdecls              : 42
bracketexp           : 27
bval                 : 34
cond                 : 57 60 60 61 61 62 62 63
decl                 : 16
declblock            : 1
decls                : 12 14 16 43 45 47
def                  : 3
defs                 : 1 3
effblock             : 57
empty                : 4 10 13 15 17 44 46 48 50
enumdef              : 5
event                : 55 56
events               : 1 55
exp                  : 18 28 28 29 29 30 30 31 31 37 54 64
initblock            : 1
locdecls             : 42
module               : 9
modules              : 1 9
names                : 6 7
num                  : 33
numbots              : 36
op                   : 62
pgm                  : 0
pid                  : 35
sdecls               : 11
stmt                 : 51 52 59
stmts                : 49 51 58
type                 : 18 19
varname              : 18 19 32 54

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . agnt defs modules declblock initblock events
    (2) agnt -> . AGENT CID NL

    AGENT           shift and go to state 2

    pgm                            shift and go to state 1
    agnt                           shift and go to state 3

state 1

    (0) S' -> pgm .



state 2

    (2) agnt -> AGENT . CID NL

    CID             shift and go to state 4


state 3

    (1) pgm -> agnt . defs modules declblock initblock events
    (3) defs -> . def defs
    (4) defs -> . empty
    (5) def -> . enumdef
    (71) empty -> .
    (6) enumdef -> . DEF ENUM CID COLON NL INDENT names NL DEDENT

    MODULE          reduce using rule 71 (empty -> .)
    ALLWRITE        reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)
    ALLREAD         reduce using rule 71 (empty -> .)
    LOCAL           reduce using rule 71 (empty -> .)
    DEF             shift and go to state 9

    defs                           shift and go to state 5
    empty                          shift and go to state 6
    def                            shift and go to state 7
    enumdef                        shift and go to state 8

state 4

    (2) agnt -> AGENT CID . NL

    NL              shift and go to state 10


state 5

    (1) pgm -> agnt defs . modules declblock initblock events
    (9) modules -> . module modules
    (10) modules -> . empty
    (11) module -> . MODULE CID COLON NL INDENT adecls sdecls DEDENT
    (71) empty -> .

    MODULE          shift and go to state 11
    ALLWRITE        reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)
    ALLREAD         reduce using rule 71 (empty -> .)
    LOCAL           reduce using rule 71 (empty -> .)

    modules                        shift and go to state 12
    module                         shift and go to state 13
    empty                          shift and go to state 14

state 6

    (4) defs -> empty .

    MODULE          reduce using rule 4 (defs -> empty .)
    ALLWRITE        reduce using rule 4 (defs -> empty .)
    INIT            reduce using rule 4 (defs -> empty .)
    LID             reduce using rule 4 (defs -> empty .)
    ALLREAD         reduce using rule 4 (defs -> empty .)
    LOCAL           reduce using rule 4 (defs -> empty .)


state 7

    (3) defs -> def . defs
    (3) defs -> . def defs
    (4) defs -> . empty
    (5) def -> . enumdef
    (71) empty -> .
    (6) enumdef -> . DEF ENUM CID COLON NL INDENT names NL DEDENT

    MODULE          reduce using rule 71 (empty -> .)
    ALLWRITE        reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)
    ALLREAD         reduce using rule 71 (empty -> .)
    LOCAL           reduce using rule 71 (empty -> .)
    DEF             shift and go to state 9

    defs                           shift and go to state 15
    enumdef                        shift and go to state 8
    empty                          shift and go to state 6
    def                            shift and go to state 7

state 8

    (5) def -> enumdef .

    DEF             reduce using rule 5 (def -> enumdef .)
    MODULE          reduce using rule 5 (def -> enumdef .)
    ALLWRITE        reduce using rule 5 (def -> enumdef .)
    INIT            reduce using rule 5 (def -> enumdef .)
    LID             reduce using rule 5 (def -> enumdef .)
    ALLREAD         reduce using rule 5 (def -> enumdef .)
    LOCAL           reduce using rule 5 (def -> enumdef .)


state 9

    (6) enumdef -> DEF . ENUM CID COLON NL INDENT names NL DEDENT

    ENUM            shift and go to state 16


state 10

    (2) agnt -> AGENT CID NL .

    DEF             reduce using rule 2 (agnt -> AGENT CID NL .)
    MODULE          reduce using rule 2 (agnt -> AGENT CID NL .)
    ALLWRITE        reduce using rule 2 (agnt -> AGENT CID NL .)
    INIT            reduce using rule 2 (agnt -> AGENT CID NL .)
    LID             reduce using rule 2 (agnt -> AGENT CID NL .)
    ALLREAD         reduce using rule 2 (agnt -> AGENT CID NL .)
    LOCAL           reduce using rule 2 (agnt -> AGENT CID NL .)


state 11

    (11) module -> MODULE . CID COLON NL INDENT adecls sdecls DEDENT

    CID             shift and go to state 17


state 12

    (1) pgm -> agnt defs modules . declblock initblock events
    (42) declblock -> . awdecls ardecls locdecls
    (43) awdecls -> . ALLWRITE COLON NL INDENT decls DEDENT
    (44) awdecls -> . empty
    (71) empty -> .

    ALLWRITE        shift and go to state 20
    ALLREAD         reduce using rule 71 (empty -> .)
    LOCAL           reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)

    awdecls                        shift and go to state 19
    empty                          shift and go to state 18
    declblock                      shift and go to state 21

state 13

    (9) modules -> module . modules
    (9) modules -> . module modules
    (10) modules -> . empty
    (11) module -> . MODULE CID COLON NL INDENT adecls sdecls DEDENT
    (71) empty -> .

    MODULE          shift and go to state 11
    ALLWRITE        reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)
    ALLREAD         reduce using rule 71 (empty -> .)
    LOCAL           reduce using rule 71 (empty -> .)

    modules                        shift and go to state 22
    empty                          shift and go to state 14
    module                         shift and go to state 13

state 14

    (10) modules -> empty .

    ALLWRITE        reduce using rule 10 (modules -> empty .)
    INIT            reduce using rule 10 (modules -> empty .)
    LID             reduce using rule 10 (modules -> empty .)
    ALLREAD         reduce using rule 10 (modules -> empty .)
    LOCAL           reduce using rule 10 (modules -> empty .)


state 15

    (3) defs -> def defs .

    MODULE          reduce using rule 3 (defs -> def defs .)
    ALLWRITE        reduce using rule 3 (defs -> def defs .)
    INIT            reduce using rule 3 (defs -> def defs .)
    LID             reduce using rule 3 (defs -> def defs .)
    ALLREAD         reduce using rule 3 (defs -> def defs .)
    LOCAL           reduce using rule 3 (defs -> def defs .)


state 16

    (6) enumdef -> DEF ENUM . CID COLON NL INDENT names NL DEDENT

    CID             shift and go to state 23


state 17

    (11) module -> MODULE CID . COLON NL INDENT adecls sdecls DEDENT

    COLON           shift and go to state 24


state 18

    (44) awdecls -> empty .

    ALLREAD         reduce using rule 44 (awdecls -> empty .)
    LOCAL           reduce using rule 44 (awdecls -> empty .)
    INIT            reduce using rule 44 (awdecls -> empty .)
    LID             reduce using rule 44 (awdecls -> empty .)


state 19

    (42) declblock -> awdecls . ardecls locdecls
    (45) ardecls -> . ALLREAD COLON NL INDENT decls DEDENT
    (46) ardecls -> . empty
    (71) empty -> .

    ALLREAD         shift and go to state 25
    LOCAL           reduce using rule 71 (empty -> .)
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)

    ardecls                        shift and go to state 26
    empty                          shift and go to state 27

state 20

    (43) awdecls -> ALLWRITE . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 28


state 21

    (1) pgm -> agnt defs modules declblock . initblock events
    (49) initblock -> . INIT COLON NL INDENT stmts DEDENT
    (50) initblock -> . empty
    (71) empty -> .

    INIT            shift and go to state 30
    LID             reduce using rule 71 (empty -> .)

    initblock                      shift and go to state 29
    empty                          shift and go to state 31

state 22

    (9) modules -> module modules .

    ALLWRITE        reduce using rule 9 (modules -> module modules .)
    INIT            reduce using rule 9 (modules -> module modules .)
    LID             reduce using rule 9 (modules -> module modules .)
    ALLREAD         reduce using rule 9 (modules -> module modules .)
    LOCAL           reduce using rule 9 (modules -> module modules .)


state 23

    (6) enumdef -> DEF ENUM CID . COLON NL INDENT names NL DEDENT

    COLON           shift and go to state 32


state 24

    (11) module -> MODULE CID COLON . NL INDENT adecls sdecls DEDENT

    NL              shift and go to state 33


state 25

    (45) ardecls -> ALLREAD . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 34


state 26

    (42) declblock -> awdecls ardecls . locdecls
    (47) locdecls -> . LOCAL COLON NL INDENT decls DEDENT
    (48) locdecls -> . empty
    (71) empty -> .

    LOCAL           shift and go to state 36
    INIT            reduce using rule 71 (empty -> .)
    LID             reduce using rule 71 (empty -> .)

    locdecls                       shift and go to state 35
    empty                          shift and go to state 37

state 27

    (46) ardecls -> empty .

    LOCAL           reduce using rule 46 (ardecls -> empty .)
    INIT            reduce using rule 46 (ardecls -> empty .)
    LID             reduce using rule 46 (ardecls -> empty .)


state 28

    (43) awdecls -> ALLWRITE COLON . NL INDENT decls DEDENT

    NL              shift and go to state 38


state 29

    (1) pgm -> agnt defs modules declblock initblock . events
    (55) events -> . event events
    (56) events -> . event
    (57) event -> . LID COLON NL INDENT PRE COLON cond NL effblock DEDENT

    LID             shift and go to state 39

    event                          shift and go to state 40
    events                         shift and go to state 41

state 30

    (49) initblock -> INIT . COLON NL INDENT stmts DEDENT

    COLON           shift and go to state 42


state 31

    (50) initblock -> empty .

    LID             reduce using rule 50 (initblock -> empty .)


state 32

    (6) enumdef -> DEF ENUM CID COLON . NL INDENT names NL DEDENT

    NL              shift and go to state 43


state 33

    (11) module -> MODULE CID COLON NL . INDENT adecls sdecls DEDENT

    INDENT          shift and go to state 44


state 34

    (45) ardecls -> ALLREAD COLON . NL INDENT decls DEDENT

    NL              shift and go to state 45


state 35

    (42) declblock -> awdecls ardecls locdecls .

    INIT            reduce using rule 42 (declblock -> awdecls ardecls locdecls .)
    LID             reduce using rule 42 (declblock -> awdecls ardecls locdecls .)


state 36

    (47) locdecls -> LOCAL . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 46


state 37

    (48) locdecls -> empty .

    INIT            reduce using rule 48 (locdecls -> empty .)
    LID             reduce using rule 48 (locdecls -> empty .)


state 38

    (43) awdecls -> ALLWRITE COLON NL . INDENT decls DEDENT

    INDENT          shift and go to state 47


state 39

    (57) event -> LID . COLON NL INDENT PRE COLON cond NL effblock DEDENT

    COLON           shift and go to state 48


state 40

    (55) events -> event . events
    (56) events -> event .
    (55) events -> . event events
    (56) events -> . event
    (57) event -> . LID COLON NL INDENT PRE COLON cond NL effblock DEDENT

    $end            reduce using rule 56 (events -> event .)
    LID             shift and go to state 39

    event                          shift and go to state 40
    events                         shift and go to state 49

state 41

    (1) pgm -> agnt defs modules declblock initblock events .

    $end            reduce using rule 1 (pgm -> agnt defs modules declblock initblock events .)


state 42

    (49) initblock -> INIT COLON . NL INDENT stmts DEDENT

    NL              shift and go to state 50


state 43

    (6) enumdef -> DEF ENUM CID COLON NL . INDENT names NL DEDENT

    INDENT          shift and go to state 51


state 44

    (11) module -> MODULE CID COLON NL INDENT . adecls sdecls DEDENT
    (12) adecls -> . ACTUATORS COLON NL INDENT decls DEDENT
    (13) adecls -> . empty
    (71) empty -> .

    ACTUATORS       shift and go to state 52
    SENSORS         reduce using rule 71 (empty -> .)
    DEDENT          reduce using rule 71 (empty -> .)

    adecls                         shift and go to state 53
    empty                          shift and go to state 54

state 45

    (45) ardecls -> ALLREAD COLON NL . INDENT decls DEDENT

    INDENT          shift and go to state 55


state 46

    (47) locdecls -> LOCAL COLON . NL INDENT decls DEDENT

    NL              shift and go to state 56


state 47

    (43) awdecls -> ALLWRITE COLON NL INDENT . decls DEDENT
    (16) decls -> . decl decls
    (17) decls -> . empty
    (18) decl -> . type varname ASGN exp NL
    (19) decl -> . type varname NL
    (71) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . POS
    (23) type -> . BOOLEAN

    DEDENT          reduce using rule 71 (empty -> .)
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    POS             shift and go to state 60
    BOOLEAN         shift and go to state 61

    decl                           shift and go to state 57
    decls                          shift and go to state 63
    type                           shift and go to state 62
    empty                          shift and go to state 64

state 48

    (57) event -> LID COLON . NL INDENT PRE COLON cond NL effblock DEDENT

    NL              shift and go to state 65


state 49

    (55) events -> event events .

    $end            reduce using rule 55 (events -> event events .)


state 50

    (49) initblock -> INIT COLON NL . INDENT stmts DEDENT

    INDENT          shift and go to state 66


state 51

    (6) enumdef -> DEF ENUM CID COLON NL INDENT . names NL DEDENT
    (7) names -> . names COMMA LID
    (8) names -> . LID

    LID             shift and go to state 67

    names                          shift and go to state 68

state 52

    (12) adecls -> ACTUATORS . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 69


state 53

    (11) module -> MODULE CID COLON NL INDENT adecls . sdecls DEDENT
    (14) sdecls -> . SENSORS COLON NL INDENT decls DEDENT
    (15) sdecls -> . empty
    (71) empty -> .

    SENSORS         shift and go to state 71
    DEDENT          reduce using rule 71 (empty -> .)

    sdecls                         shift and go to state 70
    empty                          shift and go to state 72

state 54

    (13) adecls -> empty .

    SENSORS         reduce using rule 13 (adecls -> empty .)
    DEDENT          reduce using rule 13 (adecls -> empty .)


state 55

    (45) ardecls -> ALLREAD COLON NL INDENT . decls DEDENT
    (16) decls -> . decl decls
    (17) decls -> . empty
    (18) decl -> . type varname ASGN exp NL
    (19) decl -> . type varname NL
    (71) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . POS
    (23) type -> . BOOLEAN

    DEDENT          reduce using rule 71 (empty -> .)
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    POS             shift and go to state 60
    BOOLEAN         shift and go to state 61

    decl                           shift and go to state 57
    decls                          shift and go to state 73
    type                           shift and go to state 62
    empty                          shift and go to state 64

state 56

    (47) locdecls -> LOCAL COLON NL . INDENT decls DEDENT

    INDENT          shift and go to state 74


state 57

    (16) decls -> decl . decls
    (16) decls -> . decl decls
    (17) decls -> . empty
    (18) decl -> . type varname ASGN exp NL
    (19) decl -> . type varname NL
    (71) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . POS
    (23) type -> . BOOLEAN

    DEDENT          reduce using rule 71 (empty -> .)
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    POS             shift and go to state 60
    BOOLEAN         shift and go to state 61

    decl                           shift and go to state 57
    decls                          shift and go to state 75
    type                           shift and go to state 62
    empty                          shift and go to state 64

state 58

    (20) type -> INT .

    LID             reduce using rule 20 (type -> INT .)


state 59

    (21) type -> FLOAT .

    LID             reduce using rule 21 (type -> FLOAT .)


state 60

    (22) type -> POS .

    LID             reduce using rule 22 (type -> POS .)


state 61

    (23) type -> BOOLEAN .

    LID             reduce using rule 23 (type -> BOOLEAN .)


state 62

    (18) decl -> type . varname ASGN exp NL
    (19) decl -> type . varname NL
    (25) varname -> . LID

    LID             shift and go to state 76

    varname                        shift and go to state 77

state 63

    (43) awdecls -> ALLWRITE COLON NL INDENT decls . DEDENT

    DEDENT          shift and go to state 78


state 64

    (17) decls -> empty .

    DEDENT          reduce using rule 17 (decls -> empty .)


state 65

    (57) event -> LID COLON NL . INDENT PRE COLON cond NL effblock DEDENT

    INDENT          shift and go to state 79


state 66

    (49) initblock -> INIT COLON NL INDENT . stmts DEDENT
    (51) stmts -> . stmt stmts
    (52) stmts -> . stmt
    (53) stmt -> . asgn
    (54) asgn -> . varname ASGN exp NL
    (25) varname -> . LID

    LID             shift and go to state 76

    stmts                          shift and go to state 80
    varname                        shift and go to state 81
    stmt                           shift and go to state 82
    asgn                           shift and go to state 83

state 67

    (8) names -> LID .

    NL              reduce using rule 8 (names -> LID .)
    COMMA           reduce using rule 8 (names -> LID .)


state 68

    (6) enumdef -> DEF ENUM CID COLON NL INDENT names . NL DEDENT
    (7) names -> names . COMMA LID

    NL              shift and go to state 84
    COMMA           shift and go to state 85


state 69

    (12) adecls -> ACTUATORS COLON . NL INDENT decls DEDENT

    NL              shift and go to state 86


state 70

    (11) module -> MODULE CID COLON NL INDENT adecls sdecls . DEDENT

    DEDENT          shift and go to state 87


state 71

    (14) sdecls -> SENSORS . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 88


state 72

    (15) sdecls -> empty .

    DEDENT          reduce using rule 15 (sdecls -> empty .)


state 73

    (45) ardecls -> ALLREAD COLON NL INDENT decls . DEDENT

    DEDENT          shift and go to state 89


state 74

    (47) locdecls -> LOCAL COLON NL INDENT . decls DEDENT
    (16) decls -> . decl decls
    (17) decls -> . empty
    (18) decl -> . type varname ASGN exp NL
    (19) decl -> . type varname NL
    (71) empty -> .
    (20) type -> . INT
    (21) type -> . FLOAT
    (22) type -> . POS
    (23) type -> . BOOLEAN

    DEDENT          reduce using rule 71 (empty -> .)
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    POS             shift and go to state 60
    BOOLEAN         shift and go to state 61

    decl                           shift and go to state 57
    decls                          shift and go to state 90
    type                           shift and go to state 62
    empty                          shift and go to state 64

state 75

    (16) decls -> decl decls .

    DEDENT          reduce using rule 16 (decls -> decl decls .)


state 76

    (25) varname -> LID .

    ASGN            reduce using rule 25 (varname -> LID .)
    PLUS            reduce using rule 25 (varname -> LID .)
    TIMES           reduce using rule 25 (varname -> LID .)
    MINUS           reduce using rule 25 (varname -> LID .)
    BY              reduce using rule 25 (varname -> LID .)
    RPAR            reduce using rule 25 (varname -> LID .)
    NL              reduce using rule 25 (varname -> LID .)
    AND             reduce using rule 25 (varname -> LID .)
    OR              reduce using rule 25 (varname -> LID .)
    EQ              reduce using rule 25 (varname -> LID .)
    NEQ             reduce using rule 25 (varname -> LID .)
    GEQ             reduce using rule 25 (varname -> LID .)
    LEQ             reduce using rule 25 (varname -> LID .)
    GT              reduce using rule 25 (varname -> LID .)
    LT              reduce using rule 25 (varname -> LID .)


state 77

    (18) decl -> type varname . ASGN exp NL
    (19) decl -> type varname . NL

    ASGN            shift and go to state 92
    NL              shift and go to state 91


state 78

    (43) awdecls -> ALLWRITE COLON NL INDENT decls DEDENT .
